--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.rounded-custom {
+  @apply rounded-2xl;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
