markdown math support

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,8 +13,10 @@ body {
 @layer components {
   .custom-scrollbar {
     @apply [&::-webkit-scrollbar]:w-2;
+    @apply [&::-webkit-scrollbar]:rounded-full;
     @apply [&::-webkit-scrollbar-track]:bg-gray-100;
     @apply [&::-webkit-scrollbar-thumb]:bg-gray-300;
+    @apply [&::-webkit-scrollbar-thumb]:rounded-full;
     @apply dark:[&::-webkit-scrollbar-track]:bg-neutral-700;
     @apply dark:[&::-webkit-scrollbar-thumb]:bg-neutral-500;
   }
